[package]
name = "websocket-server"
version = "0.1.0"
authors = ["Altonotch <info@altonotch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.113", features = ["derive"] }
serde_json = "1.0.55"
structopt = "0.3.15"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.3"
thiserror = "1.0.20"
